Creacion de la funcionalidad

--- a/SoftwarePruebasUnit-master/maven-demo/pom.xml
+++ b/SoftwarePruebasUnit-master/maven-demo/pom.xml
@@ -8,6 +8,52 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
   <artifactId>maven-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
     <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
+	<dependency>
+    	<groupId>org.eclipse.persistence</groupId>
+    	<artifactId>eclipselink</artifactId>
+    	<version>3.0.0-M1</version>
+	</dependency>
+	
+	
+	<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/jakarta.persistence -->
+	<dependency>
+    	<groupId>org.eclipse.persistence</groupId>
+    	<artifactId>jakarta.persistence</artifactId>
+    	<version>2.2.3</version>	
+	</dependency>
+	
+	
+	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
+	<dependency>
+    	<groupId>javax.servlet.jsp.jstl</groupId>
+    	<artifactId>jstl-api</artifactId>
+    	<version>1.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.glassfish.web/jstl-impl -->
+	<dependency>
+    	<groupId>org.glassfish.web</groupId>
+    	<artifactId>jstl-impl</artifactId>
+    	<version>1.2</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.20</version>
+	</dependency>
+	
+	
+	
+  	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+	<dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>3.0-alpha-1</version>
+    	<scope>provided</scope>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
